computation and job progress refactored to run via NightSkyClient